# aibidia

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
app/: __init__.py
app/main/: __init__.py  forms.py  views.py
app/main/templates/: index.html  map.html  mapping.html  result.html
app/main/templates/partials/: _mapping_form.html  _preview_table.html  _schema_switcher.html
app/models/: inspection.py  process.py  schema.py
app/services/: __init__.py  csv_inspector.py  csv_service.py  csv_storage.py  file_rename.py  file_storage.py  file_writer.py  schema_registry.py
app/templates/: layout.html  navbar.html
app/utils/: file.py
data/schemas/: books.json  sales.json  simple.json
test/: conftest.py
test/main/: test_views.py
test/models/: test_inspection.py  test_process.py  test_schema.py
test/services/: test_csv_service.py  test_csv_writer.py  test_file_rename.py  test_file_storage.py  test_schema_registry.py
