[project]
name = "aibidia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "cerberus>=1.3.8",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "gunicorn>=25.1.0",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 -v --cov=testing_demo"